Criação do Front-Moble completo

--- a/front-mobile/.vscode/settings.json
+++ b/front-mobile/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
   "cSpell.ignoreWords": [
     "expo",
+    "feedback",
     "fonts",
-    "loaded"
+    "loaded",
+    "touchable",
+    "without"
+  ],
+  "cSpell.words": [
+    "linking",
+    "props"
   ]
 }
